Address comments, add table of contents

--- a/tutorial/source/new_intro.ipynb
+++ b/tutorial/source/new_intro.ipynb
@@ -28,23 +28,44 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Outline\n",
+    "\n",
+    "- [Introduction](#Introduction-to-Pyro)\n",
+    "- [Outline](#Outline)\n",
+    "- [Setup](#Setup)\n",
+    "- [Background: probabilistic machine learning](#Background:-probabilistic-machine-learning)\n",
+    "  - [Background: probabilistic models](#Background:-probabilistic-models)\n",
+    "  - [Background: inference, learning and evaluation](#Background:-inference,-learning-and-evaluation)\n",
+    "- [Example: Geography and national income](#Example:-Geography-and-national-income)\n",
+    "- [Models in Pyro](#Models-in-Pyro)\n",
+    "  - [Example model: Maximum-likelihood linear regression](#Example-model:-Maximum-likelihood-linear-regression)\n",
+    "  - [Background: the pyro.sample primitive](#Background:-the-pyro.sample-primitive)\n",
+    "  - [Background: the pyro.param primitive](#Background:-the-pyro.param-primitive)\n",
+    "  - [Background: the pyro.plate primitive](#Background:-the-pyro.plate-primitive)\n",
+    "  - [Example: from maximum likelihood regression to Bayesian regression](#Example:-from-maximum-likelihood-regression-to-Bayesian-regression)\n",
+    "- [Inference in Pyro](#Inference-in-Pyro)\n",
+    "  - [Background: variational inference](#Background:-variational-inference)\n",
+    "  - [Background: \"guide\" programs as flexible approximate posteriors](#Background:-%22guide%22-programs-as-flexible-approximate-posteriors)\n",
+    "  - [Example: mean-field variational approximation for Bayesian linear regression in Pyro](#Example:-mean-field-variational-approximation-for-Bayesian-linear-regression-in-Pyro)\n",
+    "  - [Background: Estimating and optimizing the Evidence Lower Bound (ELBO)](#Background:-Estimating-and-optimizing-the-Evidence-Lower-Bound-(ELBO))\n",
+    "  - [Example: Bayesian regression via stochastic variational inference (SVI)](#Example:-Bayesian-regression-via-stochastic-variational-inference-(SVI))\n",
+    "- [Model Evaluation in Pyro](#Model-Evaluation-in-Pyro)\n",
+    "  - [Background: Bayesian model evaluation with posterior predictive checks](#Background:-Bayesian-model-evaluation-with-posterior-predictive-checks)\n",
+    "  - [Example: posterior predictive uncertainty in Pyro](#Example:-posterior-predictive-uncertainty-in-Pyro)\n",
+    "  - [Example: revisiting Bayesian regression with a full-rank guide](#Example:-revisiting-Bayesian-regression-with-a-full-rank-guide)\n",
+    "- [Next steps](#Next-steps)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "id": "Sww6pWHCqHwj"
    },
    "source": [
     "## Setup\n",
     "Let's begin by importing the modules we'll need."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "id": "yo_eBwCOqHwj"
-   },
-   "outputs": [],
-   "source": [
-    "#!pip install -q pyro-ppl[extras]"
    ]
   },
   {
@@ -331,7 +352,7 @@
     "id": "wXOWkF1DqHwo"
    },
    "source": [
-    "Probabilistic models in Pyro are given as Python functions `model(*args, **kwargs)` that generate observed data from latent variables using [special primitive functions](https://docs.pyro.ai/en/stable/primitives.html) whose behavior can be changed by Pyro's internals depending on the high-level computation being performed.\n",
+    "Probabilistic models in Pyro are specified as Python functions `model(*args, **kwargs)` that generate observed data from latent variables using [special primitive functions](https://docs.pyro.ai/en/stable/primitives.html) whose behavior can be changed by Pyro's internals depending on the high-level computation being performed.\n",
     "\n",
     "Specifically, the different mathematical pieces of `model()` are encoded via the mapping:\n",
     "\n",
@@ -424,7 +445,7 @@
     "id": "E_25lUOhqHwq"
    },
    "source": [
-    "Learning the parameters of `simple_model` would constitute **maximum likelihood estimation** and produce point estimates of the regression coefficients. However, in this example our data visualization strongly suggested we should not be too confident in any single value for the regression coefficients. By contrast, a fully Bayesian approach would produce uncertainty estimates over different possible parameter values as well as the model's predictions.\n",
+    "Learning the parameters of `simple_model` would constitute **maximum likelihood estimation** and produce point estimates of the regression coefficients. However, in this example our data visualization suggests we should not be too confident in any single value for the regression coefficients. By contrast, a fully Bayesian approach would produce uncertainty estimates over different possible parameter values as well as the model's predictions.\n",
     "\n",
     "Before making a Bayesian version of our linear model, let's pause and take a closer look at this first piece of Pyro code."
    ]
@@ -435,7 +456,7 @@
     "id": "wXOWkF1DqHwo"
    },
    "source": [
-    "### Background: The `pyro.sample` primitive\n",
+    "### Background: the `pyro.sample` primitive\n",
     "\n",
     "Probabilistic programs in Pyro are built up around samples from primitive probability distributions, marked by `pyro.sample`:\n",
     "```python\n",
@@ -470,7 +491,7 @@
     "However, note that **when any `pyro.sample` statement is observed, the meaning of *every other `pyro.sample` statement in a model* changes**; it is the job of Pyro's [inference algorithms](https://docs.pyro.ai/en/stable/inference.html) to \"run the program backwards\" and assign mathematically consistent values to all `pyro.sample` statements in a model.\n",
     "\n",
     "A reasonable question to ask at this point is why `pyro.sample` and other primitives must have names. Names are leveraged by users and by Pyro's internals to separate specifications of model, observations and inference algorithms, a key selling point of probabilistic programming languages. \n",
-    "To illustrate this, we mention the higher-order primitive [`pyro.condition`](https://docs.pyro.ai/en/stable/poutine.html#pyro.poutine.handlers.condition) which addresses the problem of writing many queries against a single Pyro model:\n",
+    "To see an example of this, we can look at the higher-order primitive [`pyro.condition`](https://docs.pyro.ai/en/stable/poutine.html#pyro.poutine.handlers.condition) which addresses the problem of writing many queries against a single Pyro model:\n",
     "```python\n",
     "def condition(\n",
     "    model: Callable[..., T],\n",
@@ -502,7 +523,7 @@
     "```python\n",
     "def param(\n",
     "    name: str,\n",
-    "    init: Optional[Union[torch.Tensor, typing.Callable[..., torch.Tensor]]] = None,\n",
+    "    init: Optional[Union[torch.Tensor, Callable[..., torch.Tensor]]] = None,\n",
     "    *,\n",
     "    constraint: torch.distributions.constraints.Constraint = constraints.real\n",
     ") -> torch.Tensor:\n",
@@ -512,6 +533,8 @@
     "Like `pyro.sample`, `pyro.param` is always called with a name as its first argument.  The first time `pyro.param` is called with a particular name, it stores the initial value specified by the second argument `init` in the parameter store and then returns that value.  After that, when it is called with that name, it returns the value from the parameter store regardless of any other arguments.  After a parameter has been initialized, it is no longer necessary to specify `init` to retrieve its value (e.g. `pyro.param(\"a\")`).\n",
     "\n",
     "The second argument, `init`, can be either a `torch.Tensor` or a function that takes no arguments and returns a tensor. The second form is useful because it avoids repeatedly constructing initial values that are only used the first time a model is run.\n",
+    "\n",
+    "Unlike PyTorch's `torch.nn.Parameter`s, parameters in Pyro can be explicitly constrained to various subsets of $\\mathbb{R}^n$, an important feature because many elementary probability distributions have parameters with restricted domains. For example, the `scale` parameter of a `Normal` distribution must be positive. The optional third argument to `pyro.param`, `constraint`, is a [`torch.distributions.constraints.Constraint`](https://docs.pyro.ai/en/stable/distributions.html#module-pyro.distributions.constraints) object stored when a parameter is initialized; constraints are reapplied after every update. Pyro ships with a large number of predefined constraints. \n",
     "\n",
     "`pyro.param` values persist across model calls, unless the parameter store is updated by an optimization algorithm or cleared via [`pyro.clear_param_store()`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.clear_param_store). Unlike `pyro.sample`, `pyro.param` can be called with the same name multiple times in a model; every call with the same name will return the same value. The global parameter store itself is accessible by calling [`pyro.get_param_store()`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.get_param_store).\n",
     "\n",
@@ -544,7 +567,7 @@
     "    name: str,\n",
     "    size: int,\n",
     "    *,\n",
-    "    dim: typing.Optional[int] = None,\n",
+    "    dim: Optional[int] = None,\n",
     "    **other_kwargs\n",
     ") -> contextlib.AbstractContextManager:\n",
     "    ...\n",
@@ -718,7 +741,7 @@
     "\n",
     "Each of the computations from the introduction (the posterior distribution, the marginal likelihood and the posterior predictive distribution) requires performing integrals that are often impossible or computationally intractable.\n",
     "\n",
-    "While Pyro includes support for many different exact and approximate inference algorithms, the best-supported is variational inference, which offers a unified scheme for finding $\\theta_{\\rm{max}}$ and computing a tractable approximation $q_{\\phi}({\\bf z})$ to the true, unknown posterior $p_{\\theta_{\\rm{max}}}({\\bf z} | {\\bf x})$ by converting the intractable integrals into optimization of a functional of $p$ and $q$. The figure below depicts this process conceptually.\n",
+    "While Pyro includes support for many different exact and approximate inference algorithms, the best-supported is variational inference, which offers a unified scheme for finding $\\theta_{\\rm{max}}$ and computing a tractable approximation $q_{\\phi}({\\bf z})$ to the true, unknown posterior $p_{\\theta_{\\rm{max}}}({\\bf z} | {\\bf x})$ by converting the intractable integrals into optimization of a functional of $p$ and $q$. The figure below depicts this process conceptually, while a more comprehensive mathematical introduction is available in the [SVI tutorials](http://pyro.ai/examples/svi_part_i.html).\n",
     "\n",
     "Most probability distributions (the light ellipse in the figure below), especially those corresponding to Bayesian posterior distributions, are too complex to represent directly, so we must define a smaller subspace, indexed by real-valued parameters $\\phi$, of distributions $q_{\\phi}({\\bf z})$ that are by construction guaranteed to be easy to sample from (the dark circle in the figure below) but may not include the true posterior distribution $p_{\\theta}({\\bf z} | {\\bf x})$ (the red star in the figure below).\n",
     "\n",
@@ -745,7 +768,7 @@
    "source": [
     "However, there are many different ways to measure distance or divergence between probability distributions. Which one should we choose? As indicated by the figure, a theoretically appealing choice is the Kullback-Leibler divergence $KL(q_{\\phi}({\\bf z}) || p_{\\theta}({\\bf z} | {\\bf x}))$, but computing this directly requires knowing the true posterior ahead of time, which would defeat the purpose.\n",
     "\n",
-    "What's more, we are interested in optimizing this divergence, which might sound even harder, but in fact it is possible to use Bayes' theorem to rewrite the definition of $KL(q_{\\phi}({\\bf z}) || p_{\\theta}({\\bf z} | {\\bf x}))$ as the difference between an intractable constant that does not depend on $q$ and a tractable term called the ***evidence lower bound (ELBO)***, defined below. Maximizing this tractable term will therefore produce the same solution as minimizing the original KL-divergence."
+    "What's more, we are interested in optimizing this divergence, which might sound even harder, but in fact it is possible to use Bayes' theorem to rewrite the definition of $KL(q_{\\phi}({\\bf z}) || p_{\\theta}({\\bf z} | {\\bf x}))$ as the difference between an intractable constant that does not depend on $q_{\\phi}$ and a tractable term called the ***evidence lower bound (ELBO)***, defined below. Maximizing this tractable term will therefore produce the same solution as minimizing the original KL-divergence."
    ]
   },
   {
@@ -911,9 +934,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pyro also contains an extensive collection of \"autoguides\" which automatically generate guide programs from a given model. Like our handwritten guide, all `pyro.autoguide.AutoGuide`s return a dictionary of values for each `pyro.sample` site they contain. \n",
+    "Pyro also contains an extensive collection of \"autoguides\" which automatically generate guide programs from a given model. Like our handwritten guide, all `pyro.autoguide.AutoGuide` instances (which are themselvesj just functions that take the same arguments as the model) return a dictionary of values for each `pyro.sample` site they contain. \n",
     "\n",
-    "The simplest autoguide is `AutoNormal`, which automatically generates a guide in a single line of code that is equivalent to the one we wrote out by hand above:"
+    "The simplest autoguide class is `AutoNormal`, which automatically generates a guide in a single line of code that is equivalent to the one we wrote out by hand above:"
    ]
   },
   {
@@ -1177,7 +1200,7 @@
     "id": "GQMNXZ5PqHws"
    },
    "source": [
-    "A note on performance: this optimization process is surprisingly slow, a consequence of high overhead in PyTorch for operations on small tensors. [NumPyro](https://github.com/pyro-ppl/numpyro), a version of Pyro built on Google's JAX library, can drastically speed up inference in models like this one, often by multiple orders of magnitude."
+    "A note on performance: this optimization process is surprisingly slow, a consequence of high overhead in PyTorch for operations on small tensors. [NumPyro](https://github.com/pyro-ppl/numpyro), a version of Pyro built on [Google's JAX library](https://github.com/google/jax), can drastically speed up inference in models like this one, often by multiple orders of magnitude."
    ]
   },
   {
@@ -1696,13 +1719,6 @@
     "\n",
     "Most users who reach this point will also find our [guide to tensor shapes in Pyro](http://pyro.ai/examples/tensor_shapes.html) essential reading. Pyro makes extensive use of the behavior of [“array broadcasting”](https://numpy.org/doc/stable/user/basics.broadcasting.html) baked into PyTorch and other array libraries to parallelize models and inference algorithms, and while it can be difficult to understand this behavior initially, applying the intuition and rules of thumb there will go a long way toward making your experience smooth and avoiding nasty shape errors."
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
