--- a/tutorial/source/new_intro.ipynb
+++ b/tutorial/source/new_intro.ipynb
@@ -206,7 +206,7 @@
    "source": [
     "## Example: Geography and national income\n",
     "\n",
-    "The following example is adapted from Chapter 7 of the excellent book [*Statistical Rethinking*](https://xcelab.net/rm/statistical-rethinking/) by Richard McElreath, which readers are encouraged to review for an accessible introduction to the broader practice of Bayesian data analysis."
+    "The following example is adapted from Chapter 7 of the excellent book [*Statistical Rethinking*](https://xcelab.net/rm/statistical-rethinking/) by Richard McElreath, which readers are encouraged to review for an accessible introduction to the broader practice of Bayesian data analysis ([Pyro code for all chapters](https://fehiepsi.github.io/rethinking-pyro/) is available)."
    ]
   },
   {
@@ -478,8 +478,15 @@
     "```python\n",
     "return log_gdp\n",
     "```\n",
-    "However, note that **when any `pyro.sample` statement is observed, the meaning of *every other `pyro.sample` statement in a model* changes**; it is the job of Pyro's [inference algorithms](https://docs.pyro.ai/en/stable/inference.html) to \"run the program backwards\" and assign mathematically consistent values to all `pyro.sample` statements in a model.\n",
-    "\n",
+    "However, note that **when any `pyro.sample` statement is observed, the meaning of *every other `pyro.sample` statement in a model* changes** following Bayes' rule; it is the job of Pyro's [inference algorithms](https://docs.pyro.ai/en/stable/inference.html) to \"run the program backwards\" and assign mathematically consistent values to all `pyro.sample` statements in a model."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "wXOWkF1DqHwo"
+   },
+   "source": [
     "A reasonable question to ask at this point is why `pyro.sample` and other primitives must have names. Names are leveraged by users and by Pyro's internals to separate specifications of model, observations and inference algorithms, a key selling point of probabilistic programming languages. \n",
     "To see an example of this, we can look at the higher-order primitive [`pyro.condition`](https://docs.pyro.ai/en/stable/poutine.html#pyro.poutine.handlers.condition) which addresses the problem of writing many queries against a single Pyro model:\n",
     "```python\n",
