remove all references to old intro tutorials

--- a/tutorial/source/effect_handlers.ipynb
+++ b/tutorial/source/effect_handlers.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Inference in probabilistic programming involves manipulating or transforming probabilistic programs written as generative models. For example, nearly all approximate inference algorithms require computing the unnormalized joint probability of values of latent and observed variables under a generative model.\n",
     "\n",
-    "Consider the following example model from the [introductory inference tutorial](http://pyro.ai/examples/intro_part_ii.html):"
+    "Consider the following example model:"
    ]
   },
   {
