--- a/tutorial/source/intro_long.ipynb
+++ b/tutorial/source/intro_long.ipynb
@@ -582,7 +582,7 @@
     "    result[i] = pyro.sample(f\"obs_{i}\", dist.Normal(mean, sigma), obs=log_gdp[i] if log_gdp is not None else None)\n",
     "return result\n",
     "```\n",
-    "When the number of repeated variables (`len(ruggedness)` in this case) is large, using a Python loop would be quite slow. Since each iteration in the loop is independent of the others, `pyro.plate` uses PyTorch's [array broadcasting]() to perform the iterations in parallel in a single vectorized operation, as in this equivalent vectorized code:\n",
+    "When the number of repeated variables (`len(ruggedness)` in this case) is large, using a Python loop would be quite slow. Since each iteration in the loop is independent of the others, `pyro.plate` uses PyTorch's [array broadcasting](https://numpy.org/doc/stable/user/basics.broadcasting.html) to perform the iterations in parallel in a single vectorized operation, as in this equivalent vectorized code:\n",
     "```python\n",
     "mean = mean.unsqueeze(-1).expand((len(ruggedness),))\n",
     "sigma = sigma.unsqueeze(-1).expand((len(ruggedness),))\n",
