--- a/tutorial/source/logistic-growth.ipynb
+++ b/tutorial/source/logistic-growth.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Logistic growth models of SARS-CoV-2 lineage proportions\n",
     "\n",
-    "This notebook explores logistic growth models, with the goal of inferring the differential growth rates of different SARS-CoV-2 lineages over time. Before this tutorial you may want to familiarize yourself with [Pyro modeling basics](http://pyro.ai/examples/intro_part_i.html) and [tensor shapes](http://pyro.ai/examples/tensor_shapes.html) in Pyro and PyTorch.\n",
+    "This notebook explores logistic growth models, with the goal of inferring the differential growth rates of different SARS-CoV-2 lineages over time. Before this tutorial you may want to familiarize yourself with [Pyro modeling basics](http://pyro.ai/examples/intro_long.html) and [tensor shapes](http://pyro.ai/examples/tensor_shapes.html) in Pyro and PyTorch.\n",
     "\n",
     "**WARNING**: The purpose of this tutorial is to demonstrate Pyro's modeling and inference syntax. \n",
     "Making reliable inferences about SARS-CoV-2 **is not** the purpose of this tutorial.\n",
