--- a/tutorial/source/intro_long.ipynb
+++ b/tutorial/source/intro_long.ipynb
@@ -346,10 +346,10 @@
     "\n",
     "Specifically, the different mathematical pieces of `model()` are encoded via the mapping:\n",
     "\n",
-    "1. latent random variables $z$ $\\Longleftrightarrow$ [`pyro.sample`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.sample)\n",
-    "2. observed random variables $x$ $\\Longleftrightarrow$ [`pyro.sample`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.sample) with the `obs` keyword argument\n",
-    "3. learnable parameters $\\theta$ $\\Longleftrightarrow$ [`pyro.param`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.param)\n",
-    "4. plates $\\Longleftrightarrow$ [`pyro.plate`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.plate) context managers\n",
+    "1. latent random variables $z$ $\\Longleftrightarrow$ [pyro.sample](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.sample)\n",
+    "2. observed random variables $x$ $\\Longleftrightarrow$ [pyro.sample](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.sample) with the `obs` keyword argument\n",
+    "3. learnable parameters $\\theta$ $\\Longleftrightarrow$ [pyro.param](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.param)\n",
+    "4. plates $\\Longleftrightarrow$ [pyro.plate](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.plate) context managers\n",
     "\n",
     "We examine each of these components in detail below in the context of a first Pyro model for linear regression."
    ]
@@ -366,7 +366,7 @@
     "mean = a + b_a * is_cont_africa + b_r * ruggedness + b_ar * is_cont_africa * ruggedness\n",
     "```\n",
     "\n",
-    "To build this up into a full probabilistic model for our dataset, we need to make the regression coefficients $\\alpha$ and $\\beta$ learnable parameters and add observation noise around the predicted mean. We can express this using the Pyro primitives introduced above and visualize the resulting model using [`pyro.render_model`](https://docs.pyro.ai/en/latest/infer.util.html?highlight=render_model#pyro.infer.inspect.render_model):"
+    "To build this up into a full probabilistic model for our dataset, we need to make the regression coefficients $\\alpha$ and $\\beta$ learnable parameters and add observation noise around the predicted mean. We can express this using the Pyro primitives introduced above and visualize the resulting model using [pyro.render_model()](https://docs.pyro.ai/en/latest/infer.util.html?highlight=render_model#pyro.infer.inspect.render_model):"
    ]
   },
   {
@@ -488,7 +488,7 @@
    },
    "source": [
     "A reasonable question to ask at this point is why `pyro.sample` and other primitives must have names. Names are leveraged by users and by Pyro's internals to separate specifications of model, observations and inference algorithms, a key selling point of probabilistic programming languages. \n",
-    "To see an example of this, we can look at the higher-order primitive [`pyro.condition`](https://docs.pyro.ai/en/stable/poutine.html#pyro.poutine.handlers.condition) which addresses the problem of writing many queries against a single Pyro model:\n",
+    "To see an example of this, we can look at the higher-order primitive [pyro.condition](https://docs.pyro.ai/en/stable/poutine.html#pyro.poutine.handlers.condition) which addresses the problem of writing many queries against a single Pyro model:\n",
     "```python\n",
     "def condition(\n",
     "    model: Callable[..., T],\n",
@@ -531,9 +531,9 @@
     "\n",
     "The second argument, `init`, can be either a `torch.Tensor` or a function that takes no arguments and returns a tensor. The second form is useful because it avoids repeatedly constructing initial values that are only used the first time a model is run.\n",
     "\n",
-    "Unlike PyTorch's `torch.nn.Parameter`s, parameters in Pyro can be explicitly constrained to various subsets of $\\mathbb{R}^n$, an important feature because many elementary probability distributions have parameters with restricted domains. For example, the `scale` parameter of a `Normal` distribution must be positive. The optional third argument to `pyro.param`, `constraint`, is a [`torch.distributions.constraints.Constraint`](https://docs.pyro.ai/en/stable/distributions.html#module-pyro.distributions.constraints) object stored when a parameter is initialized; constraints are reapplied after every update. Pyro ships with a large number of predefined constraints. \n",
+    "Unlike PyTorch's `torch.nn.Parameter`s, parameters in Pyro can be explicitly constrained to various subsets of $\\mathbb{R}^n$, an important feature because many elementary probability distributions have parameters with restricted domains. For example, the `scale` parameter of a `Normal` distribution must be positive. The optional third argument to `pyro.param`, `constraint`, is a [torch.distributions.constraints.Constraint](https://docs.pyro.ai/en/stable/distributions.html#module-pyro.distributions.constraints) object stored when a parameter is initialized; constraints are reapplied after every update. Pyro ships with a large number of predefined constraints. \n",
     "\n",
-    "`pyro.param` values persist across model calls, unless the parameter store is updated by an optimization algorithm or cleared via [`pyro.clear_param_store()`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.clear_param_store). Unlike `pyro.sample`, `pyro.param` can be called with the same name multiple times in a model; every call with the same name will return the same value. The global parameter store itself is accessible by calling [`pyro.get_param_store()`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.get_param_store).\n",
+    "`pyro.param` values persist across model calls, unless the parameter store is updated by an optimization algorithm or cleared via [pyro.clear_param_store()](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.clear_param_store). Unlike `pyro.sample`, `pyro.param` can be called with the same name multiple times in a model; every call with the same name will return the same value. The global parameter store itself is accessible by calling [pyro.get_param_store()](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.get_param_store).\n",
     "\n",
     "In our model `simple_model` above, the statement \n",
     "```python\n",
@@ -549,7 +549,7 @@
     "    a = simple_param_store[\"a\"] if \"a\" in simple_param_store else a_init()\n",
     "    ...\n",
     "```\n",
-    "While this introductory tutorial uses `pyro.param` for parameter management, Pyro is also compatible with PyTorch's familiar `torch.nn.Module` API via [`pyro.nn.PyroModule`](https://docs.pyro.ai/en/stable/nn.html#module-pyro.nn.module)."
+    "While this introductory tutorial uses `pyro.param` for parameter management, Pyro is also compatible with PyTorch's familiar `torch.nn.Module` API via [pyro.nn.PyroModule](https://docs.pyro.ai/en/stable/nn.html#module-pyro.nn.module)."
    ]
   },
   {
@@ -602,7 +602,7 @@
     "\n",
     "In order to make our linear regression model Bayesian, we need to specify *prior distributions* on the parameters $\\alpha \\in \\mathbb{R}$ and $\\beta \\in \\mathbb{R}^3$ (expanded here into scalars `b_a`, `b_r`, and `b_ar`). These are probability distributions that represent our beliefs prior to observing any data about reasonable values for $\\alpha$ and $\\beta$. We will also add a random scale parameter $\\sigma$ that controls the observation noise.\n",
     "\n",
-    "Expressing this Bayesian model for linear regression in Pyro is very intuitive: we simply replace each of the `pyro.param` statements with `pyro.sample` statements equipped with [Pyro `Distribution` objects](https://docs.pyro.ai/en/stable/distributions.html) describing prior beliefs about each parameter.\n",
+    "Expressing this Bayesian model for linear regression in Pyro is very intuitive: we simply replace each of the `pyro.param` statements with `pyro.sample` statements equipped with [Pyro Distribution objects](https://docs.pyro.ai/en/stable/distributions.html) describing prior beliefs about each parameter.\n",
     "\n",
     "For the constant term $\\alpha$, we use a Normal prior with a large standard deviation to indicate our relative lack of prior knowledge about baseline GDP. For the other regression coefficients, we use standard Normal priors (centered at 0) to represent our lack of a priori knowledge of whether the relationship between covariates and GDP is positive or negative. For the observation noise $\\sigma$, we use a flat prior bounded below by 0 because this value must be positive to be a valid standard deviation."
    ]
@@ -815,7 +815,7 @@
     "\n",
     "The distributions used in the two cases can be different, but the names must line-up 1-to-1. \n",
     "\n",
-    "Despite the flexibility it offers, writing out guides by hand can be difficult and tedious, especially for new users. Whenever possible, we recommend using ***autoguides***, or recipes for automatically generating common guide families from models that ship with Pyro in [`pyro.infer.autoguide`](https://docs.pyro.ai/en/stable/infer.autoguide.html). The next section demonstrates both approaches."
+    "Despite the flexibility it offers, writing out guides by hand can be difficult and tedious, especially for new users. Whenever possible, we recommend using ***autoguides***, or recipes for automatically generating common guide families from models that ship with Pyro in [pyro.infer.autoguide](https://docs.pyro.ai/en/stable/infer.autoguide.html). The next section demonstrates both approaches."
    ]
   },
   {
@@ -931,7 +931,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Pyro also contains an extensive collection of \"autoguides\" which automatically generate guide programs from a given model. Like our handwritten guide, all `pyro.autoguide.AutoGuide` instances (which are themselvesj just functions that take the same arguments as the model) return a dictionary of values for each `pyro.sample` site they contain. \n",
+    "Pyro also contains an extensive collection of \"autoguides\" which automatically generate guide programs from a given model. Like our handwritten guide, all `pyro.autoguide.AutoGuide` instances (which are themselves just functions that take the same arguments as the model) return a dictionary of values for each `pyro.sample` site they contain. \n",
     "\n",
     "The simplest autoguide class is `AutoNormal`, which automatically generates a guide in a single line of code that is equivalent to the one we wrote out by hand above:"
    ]
@@ -1001,7 +1001,7 @@
     "id": "faJaFIHTqHws"
    },
    "source": [
-    "Here [`pyro.optim.Adam`](https://docs.pyro.ai/en/stable/optimization.html#pyro.optim.pytorch_optimizers.Adam) is a thin wrapper around the PyTorch optimizer [`torch.optim.Adam`](https://pytorch.org/docs/stable/generated/torch.optim.Adam.html#torch.optim.Adam) (see [here](https://pyro.ai/examples/svi_part_i.html#Optimizers) for a discussion). Optimizers in `pyro.optim` are used to optimize and update parameter values in Pyro's parameter store. In particular, you will notice that we do not need to pass in learnable parameters to the optimizer since that is determined by the guide code and happens behind the scenes within the `SVI` class automatically. To take an ELBO gradient step we simply call the step method of SVI. The data argument we pass to `SVI.step` will be passed to both `model()` and `guide()`. The complete training loop is as follows:"
+    "Here [pyro.optim.Adam](https://docs.pyro.ai/en/stable/optimization.html#pyro.optim.pytorch_optimizers.Adam) is a thin wrapper around the PyTorch optimizer [torch.optim.Adam](https://pytorch.org/docs/stable/generated/torch.optim.Adam.html#torch.optim.Adam) (see [here](https://pyro.ai/examples/svi_part_i.html#Optimizers) for a discussion). Optimizers in `pyro.optim` are used to optimize and update parameter values in Pyro's parameter store. In particular, you will notice that we do not need to pass in learnable parameters to the optimizer since that is determined by the guide code and happens behind the scenes within the `SVI` class automatically. To take an ELBO gradient step we simply call the step method of SVI. The data argument we pass to `SVI.step` will be passed to both `model()` and `guide()`. The complete training loop is as follows:"
    ]
   },
   {
@@ -1318,7 +1318,7 @@
     "\n",
     "To write a guide of this form manually, we would need to combine all the latent variables so we could `pyro.sample` them together from a single `pyro.distributions.MultivariateNormal` distribution, choose an implementation of $\\rm{constrain}()$ to fix the value of $\\sigma$ to be positive, create and initialize parameters $\\mu, \\Sigma$ of the appropriate shape, and constrain the variational parameter $\\Sigma$ to remain a valid covariance matrix (i.e. stay positive-definite) throughout the optimization process.\n",
     "\n",
-    "This would be quite tedious, so instead we will use another autoguide that takes care of all of this bookkeeping for us, `pyro.infer.autoguide.AutoMultivariateNormal`:"
+    "This would be quite tedious, so instead we will use another autoguide that takes care of all of this bookkeeping for us, [pyro.infer.autoguide.AutoMultivariateNormal](https://docs.pyro.ai/en/stable/infer.autoguide.html#automultivariatenormal):"
    ]
   },
   {
