--- a/tutorial/source/intro_long.ipynb
+++ b/tutorial/source/intro_long.ipynb
@@ -225,9 +225,10 @@
    },
    "source": [
     "Let us look at the data and investigate this relationship.  We will be focusing on three features from the dataset:\n",
-    "  - `rugged`: quantifies the Terrain Ruggedness Index\n",
-    "  - `cont_africa`: whether the given nation is in Africa\n",
-    "  - `rgdppc_2000`: Real GDP per capita for the year 2000"
+    "\n",
+    "  - `rugged`: quantifies the Terrain Ruggedness Index;\n",
+    "  - `cont_africa`: whether the given nation is in Africa;\n",
+    "  - `rgdppc_2000`: Real GDP per capita for the year 2000;"
    ]
   },
   {
@@ -516,7 +517,7 @@
    "source": [
     "### Background: the `pyro.param` primitive\n",
     "\n",
-    "The next primitive used in our model, [`pyro.param`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.param), is a frontend for reading from and writing to Pyro's [key-value parameter store](https://docs.pyro.ai/en/stable/parameters.html#pyro.params.param_store.ParamStoreDict):\n",
+    "The next primitive used in our model, [pyro.param](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.param), is a frontend for reading from and writing to Pyro's [key-value parameter store](https://docs.pyro.ai/en/stable/parameters.html#pyro.params.param_store.ParamStoreDict):\n",
     "```python\n",
     "def param(\n",
     "    name: str,\n",
@@ -558,7 +559,7 @@
    "source": [
     "### Background: the `pyro.plate` primitive\n",
     "\n",
-    "[`pyro.plate`](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.plate) is Pyro's formal encoding of [plate notation](https://en.wikipedia.org/wiki/Plate_notation), widely used in probabilistic machine learning to simplify visualization and analysis of models with lots of conditionally [independent and identically distributed](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables) random variables.\n",
+    "[pyro.plate](https://docs.pyro.ai/en/stable/primitives.html#pyro.primitives.plate) is Pyro's formal encoding of [plate notation](https://en.wikipedia.org/wiki/Plate_notation), widely used in probabilistic machine learning to simplify visualization and analysis of models with lots of conditionally [independent and identically distributed](https://en.wikipedia.org/wiki/Independent_and_identically_distributed_random_variables) random variables.\n",
     "```python\n",
     "def plate(\n",
     "    name: str,\n",
