fix yet another sphinx error...

--- a/tutorial/source/intro_long.ipynb
+++ b/tutorial/source/intro_long.ipynb
@@ -479,7 +479,7 @@
     "```python\n",
     "return log_gdp\n",
     "```\n",
-    "However, note that **when any `pyro.sample` statement is observed, the meaning of *every other `pyro.sample` statement in a model* changes** following Bayes' rule; it is the job of Pyro's [inference algorithms](https://docs.pyro.ai/en/stable/inference.html) to \"run the program backwards\" and assign mathematically consistent values to all `pyro.sample` statements in a model."
+    "However, note that **when any sample statement is observed, the meaning of *every other sample statement in a model* changes** following Bayes' rule; it is the job of Pyro's [inference algorithms](https://docs.pyro.ai/en/stable/inference.html) to \"run the program backwards\" and assign mathematically consistent values to all `pyro.sample` statements in a model."
    ]
   },
   {
