--- a/tutorial/source/intro_part_i.ipynb
+++ b/tutorial/source/intro_part_i.ipynb
@@ -7,7 +7,7 @@
     "# (DEPRECATED) An Introduction to Models in Pyro\n",
     "\n",
     "## WARNING\n",
-    "***This tutorial has been deprecated in favor of the updated [Introduction to Pyro](https://pyro.ai/examples/intro_long.html). It may be removed in the future.***\n",
+    "***This tutorial has been deprecated*** in favor of the updated [Introduction to Pyro](https://pyro.ai/examples/intro_long.html). It may be removed in the future.***\n",
     "\n",
     "The basic unit of probabilistic programs is the _stochastic function_. \n",
     "This is an arbitrary Python callable that combines two ingredients:\n",
