--- a/tutorial/source/workflow.ipynb
+++ b/tutorial/source/workflow.ipynb
@@ -453,7 +453,7 @@
     "id": "8CB2cHfbKM3w"
    },
    "source": [
-    "After each change to the model or inference, you'll validate model outputs, completing [Box's loop](http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf). In our running example we'll quantitiatively evaluate using the mean average error (MAE) over the last fully-observed time step."
+    "After each change to the model or inference, you'll validate model outputs, closing [Box's loop](http://www.cs.columbia.edu/~blei/papers/Blei2014b.pdf). In our running example we'll quantitiatively evaluate using the mean average error (MAE) over the last fully-observed time step."
    ]
   },
   {
@@ -487,7 +487,7 @@
     "        global_mae = mae(true_counts, probs)\n",
     "        i = dataset[\"locations\"].index(location)\n",
     "        local_mae = mae(true_counts[i], probs[i])\n",
-    "        return {\"MAE (global)\": global_mae, f\"MAE ({location})\": local_mae}"
+    "    return {\"MAE (global)\": global_mae, f\"MAE ({location})\": local_mae}"
    ]
   },
   {
@@ -1125,11 +1125,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {
     "id": "eeVU75KDlICi"
    },
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "We've seen how to use initialzation, reparameterization, autoguides, and custom guides in a Bayesian workflow. For more examples of these pieces of machinery, we recommend exploring the Pyro codebase, e.g. [search for \"poutine.reparam\"](https://github.com/pyro-ppl/pyro/search?q=poutine.reparam&type=code) or [\"init_loc_fn\"](https://github.com/pyro-ppl/pyro/search?q=init_loc_fn&type=code) in the Pyro codebase."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
@@ -1141,7 +1150,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1155,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.9.1"
   }
  },
  "nbformat": 4,
